--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
       <link rel="icon" href="img/relax.png" type="logo" sizes="20x20">
-    <title>Let's Relaxer</title>
+    <title>Let's Relax</title>
   </head>
   <body>
     <h1>Let's Relax</h1>
